# bardecoder

./: CLAUDE.md  Cargo.toml  README.md  clippy_output.txt  overview.md  project_description.md  test_coverage_summary.md  todo.md
benches/: image_benches.rs
src/: decoder.rs  lib.rs
src/decode/: mod.rs
src/decode/qr/: blocks.rs  correct.rs  data.rs  decoder.rs  format.rs  galois.rs  mod.rs
src/detect/: linescan.rs
src/extract/: mod.rs
src/extract/qr/: mod.rs
src/prepare/: blockedmean.rs
src/util/: chomp.rs  qr.rs
tests/: decoder_with_info_tests.rs  image_tests.rs  qr_info_property_tests.rs
