[package]
name = "bardecoder"
version = "0.3.1"
authors = ["Mark Arts <piderman+github@gmail.com>", "Pixel Coda <calebsmithwoolrich@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pixelcoda/bardecoder"
homepage = "https://github.com/pixelcoda/bardecoder"
keywords = ["qr"]
categories = ["encoding","multimedia::images"]
exclude = ["/.travis.yml", "/tests/*"]
description = """
Detect and decode QR Codes
"""

[dependencies]
image = "0.23.14"
log = "0.4"
failure = "0.1"
failure_derive = "0.1"
newtype_derive = "0.1"

[features]
default=[]
debug-images=[]
fail-on-warnings=[]
benchmark=[]

[badges]
travis-ci = { repository = "pixelcoda/bardecoder" }
